Adds JsonDemo