@@ -1,6 +1,7 @@
 package se.iths.java21.files;
 
 import java.io.IOException;
+import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -11,6 +12,13 @@ import java.util.stream.Stream;
 public class FileDemo {
 
     public static void main(String[] args) throws IOException {
+        byte [] bytes = ByteBuffer.allocate(4).putInt(123456789).array();
+        Path binary = Files.createTempFile("some", ".bin");
+        Files.write(binary, bytes);
+        System.out.println("tempBinaryFile = " + binary);
+
+
+
         String homeFolder = System.getProperty("user.home");
         //String lineSeparator = System.getProperty("line.separator");
         Path path = Path.of(homeFolder, "test", "fil1.txt");
@@ -18,9 +26,10 @@ public class FileDemo {
         System.out.println(Files.exists(path));
         System.out.println(path.toAbsolutePath());
 
-        Files.writeString(path,"This is a test with åäö ûü");
-        List<String> strings = List.of("First Line", "Second Line", "Third Line");
-        Files.write(path, strings, StandardOpenOption.APPEND, StandardOpenOption.CREATE);
+      //  Files.writeString(path,"This is a test with åäö ûü");
+          Files.writeString(path,"123456789");
+       // List<String> strings = List.of("First Line", "Second Line", "Third Line");
+       // Files.write(path, strings, StandardOpenOption.APPEND, StandardOpenOption.CREATE);
 
         System.out.println(Files.exists(path));
 
